# talk-to-your-slackbot

./: .env.example  AGENTS.md  PROJECT_CONTEXT.md  README.md  Untitled  package-lock.json  package.json  pickleball_stats.yaml  pyproject.toml  stats-2.2.0.schema.json  stats.json  tsconfig.json
.github/: copilot-instructions.md
data/: stats.json
src/: schema.ts  types.ts  validate.ts
talk-to-your-slackbot/: __init__.py  main.py  slack_app.py
talk-to-your-slackbot/engine/: __init__.py  loader.py  metrics.py  models.py  planner.py  qa_log.py  reasoner.py
talk-to-your-slackbot/intake/: __init__.py  guardrails.py  models.py  parser.py
talk-to-your-slackbot/output/: __init__.py  formatter.py  guardrails.py  models.py  slack_sender.py
tests/: conftest.py  schema.test.ts  test_engine_loader.py  test_engine_planner.py  test_engine_qa_log.py  test_engine_reasoner.py  test_intake.py  test_output.py
