[project]
name = "talk-to-your-slackbot"
version = "0.1.0"
description = "Pickleball match review Slackbot using PB Vision stats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
reasoner = ["pandasai>=2.0"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["talk-to-your-slackbot"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
