[tool.poetry]
name = "talk-to-your-slackbot"
version = "0.1.0"
description = "Pickleball match review Slackbot using PB Vision stats"
authors = ["Dylan Petersen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0"
pyyaml = "^6.0"

# Optional reasoning layer
pandasai = { version = "^3.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.extras]
reasoner = ["pandasai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"